crates/aranya-policy-compiler/tests/data/type_errors/bad_builtin_arg_string_invalid_type.fail.policy
function g() int {
    return saturating_add("3", "4")
}
